// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSIcon Base: Imported 1`] = `
<div
  className="slds-p-around_medium"
>
  <span>
    <svg
      aria-hidden="true"
      className="slds-icon slds-icon-text-default"
      name=""
      viewBox="0 0 52 52"
    >
      <g>
        <path
          d="M48.5 31h-3c-.8 0-1.5.7-1.5 1.5v10c0 .8-.7 1.5-1.5 1.5h-33c-.8 0-1.5-.7-1.5-1.5v-10c0-.8-.7-1.5-1.5-1.5h-3c-.8 0-1.5.7-1.5 1.5V46c0 2.2 1.8 4 4 4h40c2.2 0 4-1.8 4-4V32.5c0-.8-.7-1.5-1.5-1.5z"
        />
        <path
          d="M25 37.6c.6.6 1.5.6 2.1 0l13.5-13.5c.6-.6.6-1.5 0-2.1l-2.1-2.1c-.6-.6-1.5-.6-2.1 0l-5.6 5.6c-.6.6-1.7.2-1.7-.7V3.5C29 2.7 28.2 2 27.5 2h-3c-.8 0-1.5.7-1.5 1.5v21.2c0 .9-1.1 1.3-1.7.7l-5.6-5.6c-.6-.6-1.5-.6-2.1 0L11.5 22c-.6.6-.6 1.5 0 2.1L25 37.6z"
        />
      </g>
    </svg>
    <span
      className="slds-assistive-text"
    >
      Download
    </span>
  </span>
</div>
`;

exports[`DOM snapshots SLDSIcon Base: Standard (custom styles) 1`] = `
<div
  className="slds-p-around_medium"
>
  <span
    className="slds-icon_container slds-icon-standard-account"
    title="This is a title"
  >
    <svg
      aria-hidden="true"
      className="slds-icon"
      style={
        Object {
          "backgroundColor": "#aceace",
          "fill": "orangered",
        }
      }
    >
      <use
        href="/assets/icons/standard-sprite/svg/symbols.svg#account"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Account
    </span>
  </span>
</div>
`;

exports[`DOM snapshots SLDSIcon Category: Action 1`] = `
<div
  className="slds-p-around_medium"
>
  <span
    className="slds-icon_container slds-icon_container_circle slds-icon-action-description"
  >
    <svg
      aria-hidden="true"
      className="slds-icon slds-icon_small"
    >
      <use
        href="/assets/icons/action-sprite/svg/symbols.svg#description"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Description of icon
    </span>
  </span>
</div>
`;

exports[`DOM snapshots SLDSIcon Category: Custom 1`] = `
<div
  className="slds-p-around_medium"
>
  <span
    className="slds-icon_container slds-icon-custom-custom5"
    title="description of icon when needed"
  >
    <svg
      aria-hidden="true"
      className="slds-icon"
    >
      <use
        href="/assets/icons/custom-sprite/svg/symbols.svg#custom5"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Description of icon
    </span>
  </span>
</div>
`;

exports[`DOM snapshots SLDSIcon Category: Doctype 1`] = `
<div
  className="slds-p-around_medium"
>
  <span
    className="slds-icon_container"
  >
    <svg
      aria-hidden="true"
      className="slds-icon"
    >
      <use
        href="/assets/icons/doctype-sprite/svg/symbols.svg#xml"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Description of icon
    </span>
  </span>
</div>
`;

exports[`DOM snapshots SLDSIcon Category: External Path 1`] = `
<div
  className="slds-p-around_medium"
>
  <span
    className="slds-icon_container"
  >
    <svg
      aria-hidden="true"
      className="slds-icon slds-icon-text-default"
    >
      <use
        href="/assets/icons/utility-sprite/svg/symbols.svg#announcement"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      We got news!
    </span>
  </span>
</div>
`;

exports[`DOM snapshots SLDSIcon Category: Standard - Right to Left (RTL) 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    dir="rtl"
  >
    <span
      className="slds-icon_container slds-icon-standard-branch-merge"
      title="description of icon"
    >
      <svg
        aria-hidden="true"
        className="slds-icon"
      >
        <use
          href="/assets/icons/standard-sprite/svg/symbols-rtl.svg#branch_merge"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Description of icon
      </span>
    </span>
  </div>
</div>
`;

exports[`DOM snapshots SLDSIcon Category: Standard 1`] = `
<div
  className="slds-p-around_medium"
>
  <span
    className="slds-icon_container slds-icon-standard-branch-merge"
    title="description of icon"
  >
    <svg
      aria-hidden="true"
      className="slds-icon"
    >
      <use
        href="/assets/icons/standard-sprite/svg/symbols.svg#branch_merge"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Description of icon
    </span>
  </span>
</div>
`;

exports[`DOM snapshots SLDSIcon Category: Utility 1`] = `
<div
  className="slds-p-around_medium"
>
  <span
    title="description of icon when needed"
  >
    <svg
      aria-hidden="true"
      className="slds-icon slds-icon_small slds-icon-text-default"
    >
      <use
        href="/assets/icons/utility-sprite/svg/symbols.svg#announcement"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Description of icon
    </span>
  </span>
</div>
`;

exports[`DOM snapshots SLDSIcon Color: Base 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "backgroundColor": "goldenrod",
        "padding": "10px",
      }
    }
  >
    <span
      title="description of icon when needed"
    >
      <svg
        aria-hidden="true"
        className="slds-icon"
      >
        <use
          href="/assets/icons/utility-sprite/svg/symbols.svg#announcement"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Description of icon
      </span>
    </span>
  </div>
</div>
`;

exports[`DOM snapshots SLDSIcon Color: Default 1`] = `
<div
  className="slds-p-around_medium"
>
  <span
    title="This is a title"
  >
    <svg
      aria-hidden="true"
      className="slds-icon slds-icon-text-default"
    >
      <use
        href="/assets/icons/utility-sprite/svg/symbols.svg#announcement"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Description of icon
    </span>
  </span>
</div>
`;

exports[`DOM snapshots SLDSIcon Color: Error 1`] = `
<div
  className="slds-p-around_medium"
>
  <span
    title="description of icon"
  >
    <svg
      aria-hidden="true"
      className="slds-icon slds-icon-text-error"
    >
      <use
        href="/assets/icons/utility-sprite/svg/symbols.svg#announcement"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Description of icon
    </span>
  </span>
</div>
`;

exports[`DOM snapshots SLDSIcon Color: Light 1`] = `
<div
  className="slds-p-around_medium"
>
  <span
    title="description of icon"
  >
    <svg
      aria-hidden="true"
      className="slds-icon slds-icon-text-light"
    >
      <use
        href="/assets/icons/utility-sprite/svg/symbols.svg#announcement"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Description of icon
    </span>
  </span>
</div>
`;

exports[`DOM snapshots SLDSIcon Color: Success 1`] = `
<div
  className="slds-p-around_medium"
>
  <span
    title="description of icon"
  >
    <svg
      aria-hidden="true"
      className="slds-icon slds-icon-text-success"
    >
      <use
        href="/assets/icons/utility-sprite/svg/symbols.svg#announcement"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Description of icon
    </span>
  </span>
</div>
`;

exports[`DOM snapshots SLDSIcon Color: Warning 1`] = `
<div
  className="slds-p-around_medium"
>
  <span
    title="description of icon"
  >
    <svg
      aria-hidden="true"
      className="slds-icon slds-icon-text-warning"
    >
      <use
        href="/assets/icons/utility-sprite/svg/symbols.svg#announcement"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Description of icon
    </span>
  </span>
</div>
`;

exports[`DOM snapshots SLDSIcon Docs site Categories 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
  >
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon_container slds-icon-standard-account"
      >
        <svg
          aria-hidden="true"
          className="slds-icon slds-icon_small"
        >
          <use
            href="/assets/icons/standard-sprite/svg/symbols.svg#account"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Account
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span>
        <svg
          aria-hidden="true"
          className="slds-icon slds-icon_small slds-icon-text-default"
        >
          <use
            href="/assets/icons/utility-sprite/svg/symbols.svg#announcement"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Announcement
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon_container slds-icon_container_circle slds-icon-action-description"
      >
        <svg
          aria-hidden="true"
          className="slds-icon slds-icon_small"
        >
          <use
            href="/assets/icons/action-sprite/svg/symbols.svg#description"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Description
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon_container"
      >
        <svg
          aria-hidden="true"
          className="slds-icon slds-icon_small"
        >
          <use
            href="/assets/icons/doctype-sprite/svg/symbols.svg#xml"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          XML
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon_container slds-icon-custom-custom5"
      >
        <svg
          aria-hidden="true"
          className="slds-icon slds-icon_small"
        >
          <use
            href="/assets/icons/custom-sprite/svg/symbols.svg#custom5"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          custom5
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSIcon Docs site Colors 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
  >
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon_container slds-icon-standard-lead"
      >
        <svg
          aria-hidden="true"
          className="slds-icon"
        >
          <use
            href="/assets/icons/standard-sprite/svg/symbols.svg#lead"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Lead
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span>
        <svg
          aria-hidden="true"
          className="slds-icon slds-icon-text-default"
        >
          <use
            href="/assets/icons/utility-sprite/svg/symbols.svg#lock"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Lock
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span>
        <svg
          aria-hidden="true"
          className="slds-icon slds-icon-text-light"
        >
          <use
            href="/assets/icons/utility-sprite/svg/symbols.svg#lock"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Lock
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span>
        <svg
          aria-hidden="true"
          className="slds-icon slds-icon-text-success"
        >
          <use
            href="/assets/icons/utility-sprite/svg/symbols.svg#success"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Success
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span>
        <svg
          aria-hidden="true"
          className="slds-icon slds-icon-text-warning"
        >
          <use
            href="/assets/icons/utility-sprite/svg/symbols.svg#warning"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Warning
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span>
        <svg
          aria-hidden="true"
          className="slds-icon slds-icon-text-error"
        >
          <use
            href="/assets/icons/utility-sprite/svg/symbols.svg#error"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Warning
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSIcon Docs site Sizes 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
  >
    <div
      className="slds-col_padded"
    >
      <span>
        <svg
          aria-hidden="true"
          className="slds-icon slds-icon_x-small slds-icon-text-default"
        >
          <use
            href="/assets/icons/utility-sprite/svg/symbols.svg#warning"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Warning
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon_container slds-icon-standard-case"
      >
        <svg
          aria-hidden="true"
          className="slds-icon slds-icon_small"
        >
          <use
            href="/assets/icons/standard-sprite/svg/symbols.svg#case"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Case
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon_container slds-icon-standard-case"
      >
        <svg
          aria-hidden="true"
          className="slds-icon"
        >
          <use
            href="/assets/icons/standard-sprite/svg/symbols.svg#case"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Case
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon_container slds-icon-standard-case"
      >
        <svg
          aria-hidden="true"
          className="slds-icon slds-icon_large"
        >
          <use
            href="/assets/icons/standard-sprite/svg/symbols.svg#case"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Case
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSIcon Product Themes 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
  >
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon_container slds-icon-standard-account"
      >
        <svg
          aria-hidden="true"
          className="slds-icon"
          style={
            Object {
              "backgroundColor": "#2A739E",
            }
          }
        >
          <use
            href="/assets/icons/standard-sprite/svg/symbols.svg#account"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Global Setup
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon_container slds-icon-standard-address"
      >
        <svg
          aria-hidden="true"
          className="slds-icon"
          style={
            Object {
              "backgroundColor": "#7f2443",
            }
          }
        >
          <use
            href="/assets/icons/standard-sprite/svg/symbols.svg#address"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Service Cloud
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon_container slds-icon-standard-answer-best"
      >
        <svg
          aria-hidden="true"
          className="slds-icon"
          style={
            Object {
              "backgroundColor": "#4c2248",
            }
          }
        >
          <use
            href="/assets/icons/standard-sprite/svg/symbols.svg#answer_best"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Industry Cloud
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon_container slds-icon-standard-canvas"
      >
        <svg
          aria-hidden="true"
          className="slds-icon"
          style={
            Object {
              "backgroundColor": "#00857d",
            }
          }
        >
          <use
            href="/assets/icons/standard-sprite/svg/symbols.svg#canvas"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Sales Cloud
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon_container slds-icon-standard-choice"
      >
        <svg
          aria-hidden="true"
          className="slds-icon"
          style={
            Object {
              "backgroundColor": "#41693d",
            }
          }
        >
          <use
            href="/assets/icons/standard-sprite/svg/symbols.svg#choice"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Commerce Cloud
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon_container slds-icon-standard-choice"
      >
        <svg
          aria-hidden="true"
          className="slds-icon"
          style={
            Object {
              "backgroundColor": "#ffc20e",
            }
          }
        >
          <use
            href="/assets/icons/standard-sprite/svg/symbols.svg#choice"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Community Cloud
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon_container slds-icon-standard-choice"
      >
        <svg
          aria-hidden="true"
          className="slds-icon"
          style={
            Object {
              "backgroundColor": "#ea7600",
            }
          }
        >
          <use
            href="/assets/icons/standard-sprite/svg/symbols.svg#choice"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Marketing Cloud
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon_container slds-icon-standard-choice"
      >
        <svg
          aria-hidden="true"
          className="slds-icon"
          style={
            Object {
              "backgroundColor": "#cf451d",
            }
          }
        >
          <use
            href="/assets/icons/standard-sprite/svg/symbols.svg#choice"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Quip
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSIcon Size: Large 1`] = `
<div
  className="slds-p-around_medium"
>
  <span
    className="slds-icon_container slds-icon-standard-case"
  >
    <svg
      aria-hidden="true"
      className="slds-icon slds-icon_large"
    >
      <use
        href="/assets/icons/standard-sprite/svg/symbols.svg#case"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Description of icon
    </span>
  </span>
</div>
`;

exports[`DOM snapshots SLDSIcon Size: Medium (default) 1`] = `
<div
  className="slds-p-around_medium"
>
  <span
    className="slds-icon_container slds-icon-standard-case"
  >
    <svg
      aria-hidden="true"
      className="slds-icon"
    >
      <use
        href="/assets/icons/standard-sprite/svg/symbols.svg#case"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Description of icon
    </span>
  </span>
</div>
`;

exports[`DOM snapshots SLDSIcon Size: Small 1`] = `
<div
  className="slds-p-around_medium"
>
  <span
    className="slds-icon_container slds-icon-standard-case"
  >
    <svg
      aria-hidden="true"
      className="slds-icon slds-icon_small"
    >
      <use
        href="/assets/icons/standard-sprite/svg/symbols.svg#case"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Description of icon
    </span>
  </span>
</div>
`;

exports[`DOM snapshots SLDSIcon Size: X-Small 1`] = `
<div
  className="slds-p-around_medium"
>
  <span>
    <svg
      aria-hidden="true"
      className="slds-icon slds-icon_x-small slds-icon-text-default"
    >
      <use
        href="/assets/icons/utility-sprite/svg/symbols.svg#warning"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Description of icon
    </span>
  </span>
</div>
`;
